--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
